--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="SpasserBib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SpasserBib.h">
