--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClCompile Include="Ex2_1.cpp" />
     <ClCompile Include="Ex3_1.cpp" />
+    <ClCompile Include="Ex4.cpp" />
     <ClCompile Include="SpasserBib.cpp" />
   </ItemGroup>
   <ItemGroup>
